assets/style.sass
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;600;700;800&display=swap')
@import url('https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.min.css')

//------------------------------------------
//	   	variables
//------------------------------------------
$font-family: 'Outfit', sans-serif
$body-font-family: $font-family
$heading-font-family: $font-family
$body-line-height: 1.75
$toolbar-height: 80px
$primary-color: #7e3ff2
$secondary-color: #ef0078
$accent-color: #b794f6
$text-color: #333
$divider-color: #dedede

//------------------------------------------
//	   	Typography
//------------------------------------------
html
  font-size: 100%
  scroll-behavior: smooth

body
  background: white
  font-family: $font-family
  font-weight: 400
  line-height: 1.5

.v-application
  p
    margin-bottom: 1rem
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .display-4,
  .display-3,
  .display-2,
  .display-1,
  .headline,
  .title,
  .subtitle-1,
  .subtitle-2,
  .body-1,
  .body-2,
  .caption,
  .overline
    font-family: $font-family !important

  h1
    margin-top: 0
    font-size: 3.052rem

  h2
    font-size: 2.441rem

  h3
    font-size: 1.953rem

  h4
    font-size: 1.563rem

  h5
    font-size: 1.25rem

  small, .text_small
    font-size: 0.8rem

//------------------------------------------
//	   	Global
//------------------------------------------
.v-application
  font-family: $font-family
  line-height: 1.5

  .secondary--text
    color: $secondary-color !important
  .secondary
    background-color: $secondary-color !important
    border-color: $secondary-color !important
  .accent
    background-color: $accent-color !important
    border-color: $accent-color !important
  .accent--text
    color: $accent-color !important
    caret-color: $accent-color !important

  .v-navigation-drawer
    &.no-border
      .v-navigation-drawer__border
        width: 0

  .text-h1,.text-h2,.text-h3,.text-h4,.text-h5,.text-h6
    font-family: $font-family !important

  a
    outline: 0
    text-decoration: none
    color: $primary-color
    -webkit-transition: all 0.35s
    transition: all 0.35s
    color: $primary-color
    &.text
      color: inherit
    &:hover
      color: $primary-color
      text-decoration: none
  img
    max-width: 100%

  .primary
    background-color: $primary-color !important
    border-color: $primary-color !important

  .primary--text
    color: $primary-color !important
    caret-color: $primary-color !important

  .lead
    font-size: 1.25rem
    font-weight: 300

.theme--light.v-application
  color: $text-color !important

//------------------------------------------
//	   	Main Conatiner
//------------------------------------------
.main-container
  max-width: 1320px !important
  position: relative
  z-index: 4

//------------------------------------------
//	   	section
//------------------------------------------
section
  padding: 48px 0 32px
  position: relative
  z-index: 1

//------------------------------------------
//	   	button
//------------------------------------------
.v-btn
  text-transform: inherit !important

//------------------------------------------
//	   	pagination
//------------------------------------------
.v-pagination
  .v-pagination__navigation,
  .v-pagination__item
    box-shadow: 0 0 0 0 #fff
    border: 1px solid #e0e0e0

//------------------------------------------
//	   	form
//------------------------------------------
.theme--light.v-text-field--outlined:not(.v-input--is-focused):not(.v-input--has-state) > .v-input__control > .v-input__slot fieldset
  color: $divider-color
.v-input__icon.v-input__icon--prepend-inner
  margin-right: 8px
  .v-icon
    color: #bdbdbd !important

//------------------------------------------
//	   	table
//------------------------------------------
.theme--light.v-data-table > .v-data-table__wrapper > table > thead > tr:last-child > th
  border-color: $divider-color !important
  text-transform: uppercase
  height: 58px
  color: #9e9e9e
  padding: 0 24px
.v-data-table > .v-data-table__wrapper > table > tbody > tr > td, .v-data-table > .v-data-table__wrapper > table > thead > tr > td, .v-data-table > .v-data-table__wrapper > table > tfoot > tr > td
  text-transform: capitalize
  border-color: $divider-color !important
  padding: 0 24px

//------------------------------------------
//	   	divider
//------------------------------------------
.theme--light.v-divider
  border-color: $divider-color !important
.v-divider
  &.lg
    border-width: 1px !important

// Chat screen
.chat-screen
  background-color: #f3ede7

  .messages-container
    overflow-y: scroll

    .v-list-item
      min-height: auto

      .message
        margin-top: 2px
        background-color: white
        border-radius: 0px 8px 8px 8px
        display: block
        line-height: 1
        min-height: auto
        padding: 4px
        max-width: 80%
        filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.1))

        .text
          overflow: hidden
          display: inline-block
          font-size: 16px
          line-height: 1.25
          margin: 8px
          white-space: pre-line

          ul
            list-style: none

          p
            margin: 0

        &:after
          position: absolute
          content: ""
          width: 0
          height: 0
          border-style: solid

        &.received:after
          border-width: 0px 10px 10px 0
          border-color: transparent #fff transparent transparent
          top: 0
          left: -10px

        &.sent
          background-color: #D9FDD3
          border-radius: 8px 0px 8px 8px

          &:after
            border-width: 0px 0 10px 10px
            border-color: transparent transparent transparent #D9FDD3
            top: 0
            right: -10px

